--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,188 @@ packages = [{include = "ai_academy_intro_to_ai"}]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+aiohttp = "3.8.4"
+aiosignal = "1.3.1"
+altair = "5.0.1"
+anyio = "3.7.0"
+area = "1.1.1"
+argcomplete = "3.1.1"
+astroid = "2.12.12"
+async-timeout = "4.0.2"
+attrs = "23.1.0"
+beautifulsoup4 = "4.12.2"
+blinker = "1.6.2"
+blis = "0.7.9"
+build = "0.10.0"
+cachecontrol = "0.12.14"
+cachetools = "5.3.1"
+catalogue = "2.0.8"
+certifi = "2023.5.7"
+cffi = "1.15.1"
+charset-normalizer = "3.1.0"
+cleo = "2.0.1"
+click = "8.1.3"
+colorama = "0.4.6"
+confection = "0.1.0"
+crashtest = "0.4.1"
+cryptography = "41.0.1"
+cymem = "2.0.7"
+dataclasses-json = "0.5.9"
+decorator = "5.1.1"
+dill = "0.3.6"
+diskcache = "5.6.1"
+distlib = "0.3.6"
+dulwich = "0.21.5"
+faiss-cpu = "1.7.4"
+fastapi = "0.99.0"
+filelock = "3.12.2"
+frozenlist = "1.3.3"
+fsspec = "2023.6.0"
+gitdb = "4.0.10"
+gitpython = "3.1.31"
+greenlet = "2.0.2"
+grpcio = "1.56.0"
+grpcio-tools = "1.56.0"
+h11 = "0.14.0"
+h2 = "4.1.0"
+hpack = "4.0.0"
+html5lib = "1.1"
+httpcore = "0.17.2"
+httpx = "0.24.1"
+huggingface-hub = "0.16.2"
+hyperframe = "6.0.1"
+idna = "3.4"
+importlib-metadata = "6.7.0"
+installer = "0.7.0"
+isort = "5.10.1"
+jaraco-classes = "3.3.0"
+jinja2 = "3.1.2"
+joblib = "1.3.1"
+jsonschema = "4.17.3"
+kanren = "0.2.3"
+keyring = "23.13.1"
+langchain = "0.0.225"
+langchainplus-sdk = "0.0.20"
+langcodes = "3.3.0"
+lazy-object-proxy = "1.8.0"
+llama-cpp-python = "0.1.68"
+lockfile = "0.12.2"
+lxml = "4.9.3"
+markdown-it-py = "3.0.0"
+markupsafe = "2.1.3"
+marshmallow = "3.19.0"
+marshmallow-enum = "1.5.1"
+mccabe = "0.7.0"
+mdurl = "0.1.2"
+more-itertools = "9.1.0"
+mpmath = "1.3.0"
+msgpack = "1.0.5"
+multidict = "6.0.4"
+multipledispatch = "1.0.0"
+murmurhash = "1.0.9"
+mypy-extensions = "1.0.0"
+networkx = "3.1"
+nltk = "3.8.1"
+numexpr = "2.8.4"
+numpy = "1.25.0"
+openai = "0.27.8"
+openapi-schema-pydantic = "1.2.4"
+packaging = "23.1"
+pandas = "2.0.3"
+pathy = "0.10.2"
+pdfminer = "20191125"
+pdfminer-six = "20221105"
+pdfplumber = "0.9.0"
+pexpect = "4.8.0"
+pillow = "9.5.0"
+pipx = "1.2.0"
+pkginfo = "1.9.6"
+platformdirs = "3.8.1"
+poetry = "1.5.1"
+poetry-core = "1.6.1"
+poetry-plugin-export = "1.4.0"
+polars = "0.18.7"
+portalocker = "2.7.0"
+preshed = "3.0.8"
+progressbar2 = "4.2.0"
+protobuf = "4.23.3"
+ptyprocess = "0.7.0"
+pyarrow = "12.0.1"
+pycoral = "0.1.0"
+pycparser = "2.21"
+pycryptodome = "3.18.0"
+pydantic = "1.10.10"
+pydeck = "0.8.1b0"
+pygments = "2.15.1"
+pylint = "2.15.5"
+pympler = "1.0.1"
+pypdf2 = "3.0.1"
+pyproject-hooks = "1.0.0"
+pyrsistent = "0.19.3"
+python-dateutil = "2.8.2"
+python-docx = "0.8.11"
+python-dotenv = "1.0.0"
+python-frontmatter = "1.0.0"
+python-utils = "3.7.0"
+pytz = "2023.3"
+pytz-deprecation-shim = "0.1.0.post0"
+pywin32 = "306"
+pywin32-ctypes = "0.2.2"
+pyyaml = "6.0"
+rapidfuzz = "2.15.1"
+regex = "2023.6.3"
+requests = "2.31.0"
+requests-toolbelt = "1.0.0"
+rich = "13.4.2"
+safetensors = "0.3.1"
+scikit-learn = "1.3.0"
+sentence-transformers = "2.2.2"
+sentencepiece = "0.1.99"
+shellingham = "1.5.0.post1"
+six = "1.16.0"
+smart-open = "6.3.0"
+smmap = "5.0.0"
+sniffio = "1.3.0"
+soupsieve = "2.4.1"
+spacy = "3.6.0.dev1"
+spacy-legacy = "3.0.12"
+spacy-loggers = "1.0.4"
+sqlalchemy = "1.4.49"
+sqlitedict = "2.1.0"
+srsly = "2.4.6"
+starlette = "0.27.0"
+sympy = "1.12"
+tenacity = "8.2.2"
+thinc = "8.1.10"
+threadpoolctl = "3.1.0"
+tiktoken = "0.4.0"
+tokenizers = "0.13.3"
+toml = "0.10.2"
+tomlkit = "0.11.6"
+toolz = "0.12.0"
+torch = "2.0.1"
+torchvision = "0.15.2"
+tornado = "6.3.2"
+tqdm = "4.65.0"
+transformers = "4.30.2"
+trove-classifiers = "2023.7.6"
+typer = "0.9.0"
+typing-inspect = "0.9.0"
+tzdata = "2023.3"
+tzlocal = "4.3.1"
+unification = "0.2.2"
+urllib3 = "1.26.16"
+userpath = "1.8.0"
+uvicorn = "0.22.0"
+validators = "0.20.0"
+virtualenv = "20.23.1"
+wand = "0.6.11"
+wasabi = "1.1.2"
+watchdog = "3.0.0"
+webencodings = "0.5.1"
+wrapt = "1.14.1"
+yarl = "1.9.2"
+zipp = "3.15.0"
 
 
 [build-system]
